--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
-body {background-color:tan;}
-h1{color:green;}
+body 
+{
+background-color:black;
+color:white;
+font-family:arial}
+h1
+{
+    color:grey;
+    font-family:verdana;
+}
+.maindiv
+{
+    background-color:white;
+    color:black;
+    width:300px;
+    padding:20px;
+    align-content:center;
+    border-radius:25px;
+}
 
 
